# silver-octo-chainsaw

./: Dockerfile  README.MD  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  main.py
app/database/: database_manager.py  models.py
app/repositories/: job_model_repository.py  serp_api_repository.py
migrations/: env.py
tests/: test_serp_api_repository.py
